checking out books

--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.8295454545454546" branch-rate="0.5909090909090909" lines-covered="73" lines-valid="88" branches-covered="13" branches-valid="22" complexity="2.0588235294117645" version="2.1.1" timestamp="1441688496341">
+<coverage line-rate="0.8522727272727273" branch-rate="0.6363636363636364" lines-covered="75" lines-valid="88" branches-covered="14" branches-valid="22" complexity="2.0588235294117645" version="2.1.1" timestamp="1441693879331">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.8295454545454546" branch-rate="0.5909090909090909" complexity="2.0588235294117645">
+		<package name="com.tw.biblioteca" line-rate="0.8522727272727273" branch-rate="0.6363636363636364" complexity="2.0588235294117645">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -54,11 +54,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="28" branch="false"/>
-								<line number="10" hits="28" branch="false"/>
-								<line number="11" hits="28" branch="false"/>
-								<line number="12" hits="28" branch="false"/>
-								<line number="13" hits="28" branch="false"/>
+								<line number="9" hits="31" branch="false"/>
+								<line number="10" hits="31" branch="false"/>
+								<line number="11" hits="31" branch="false"/>
+								<line number="12" hits="31" branch="false"/>
+								<line number="13" hits="31" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="0.875" branch-rate="0.8333333333333334" complexity="0">
@@ -109,11 +109,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="28" branch="false"/>
-						<line number="10" hits="28" branch="false"/>
-						<line number="11" hits="28" branch="false"/>
-						<line number="12" hits="28" branch="false"/>
-						<line number="13" hits="28" branch="false"/>
+						<line number="9" hits="31" branch="false"/>
+						<line number="10" hits="31" branch="false"/>
+						<line number="11" hits="31" branch="false"/>
+						<line number="12" hits="31" branch="false"/>
+						<line number="13" hits="31" branch="false"/>
 						<line number="16" hits="9" branch="false"/>
 						<line number="17" hits="9" branch="false"/>
 						<line number="21" hits="5" branch="true" condition-coverage="100% (2/2)">
@@ -154,12 +154,12 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="7" branch="false"/>
-								<line number="9" hits="7" branch="false"/>
-								<line number="10" hits="7" branch="false"/>
-								<line number="11" hits="7" branch="false"/>
-								<line number="12" hits="7" branch="false"/>
-								<line number="13" hits="7" branch="false"/>
+								<line number="7" hits="8" branch="false"/>
+								<line number="9" hits="8" branch="false"/>
+								<line number="10" hits="8" branch="false"/>
+								<line number="11" hits="8" branch="false"/>
+								<line number="12" hits="8" branch="false"/>
+								<line number="13" hits="8" branch="false"/>
 							</lines>
 						</method>
 						<method name="printList" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -183,12 +183,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="7" branch="false"/>
-						<line number="9" hits="7" branch="false"/>
-						<line number="10" hits="7" branch="false"/>
-						<line number="11" hits="7" branch="false"/>
-						<line number="12" hits="7" branch="false"/>
-						<line number="13" hits="7" branch="false"/>
+						<line number="7" hits="8" branch="false"/>
+						<line number="9" hits="8" branch="false"/>
+						<line number="10" hits="8" branch="false"/>
+						<line number="11" hits="8" branch="false"/>
+						<line number="12" hits="8" branch="false"/>
+						<line number="13" hits="8" branch="false"/>
 						<line number="16" hits="3" branch="false"/>
 						<line number="17" hits="11" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -206,32 +206,32 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/BookInfoList;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="6" hits="1" branch="false"/>
-								<line number="8" hits="1" branch="false"/>
-								<line number="9" hits="1" branch="false"/>
-								<line number="10" hits="1" branch="false"/>
+								<line number="6" hits="2" branch="false"/>
+								<line number="8" hits="2" branch="false"/>
+								<line number="9" hits="2" branch="false"/>
+								<line number="10" hits="2" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkout" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="13" hits="1" branch="false"/>
-								<line number="14" hits="1" branch="false"/>
-								<line number="15" hits="1" branch="false"/>
-								<line number="16" hits="1" branch="false"/>
-								<line number="17" hits="1" branch="false"/>
+								<line number="13" hits="2" branch="false"/>
+								<line number="14" hits="2" branch="false"/>
+								<line number="15" hits="2" branch="false"/>
+								<line number="16" hits="2" branch="false"/>
+								<line number="17" hits="2" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="6" hits="1" branch="false"/>
-						<line number="8" hits="1" branch="false"/>
-						<line number="9" hits="1" branch="false"/>
-						<line number="10" hits="1" branch="false"/>
-						<line number="13" hits="1" branch="false"/>
-						<line number="14" hits="1" branch="false"/>
-						<line number="15" hits="1" branch="false"/>
-						<line number="16" hits="1" branch="false"/>
-						<line number="17" hits="1" branch="false"/>
+						<line number="6" hits="2" branch="false"/>
+						<line number="8" hits="2" branch="false"/>
+						<line number="9" hits="2" branch="false"/>
+						<line number="10" hits="2" branch="false"/>
+						<line number="13" hits="2" branch="false"/>
+						<line number="14" hits="2" branch="false"/>
+						<line number="15" hits="2" branch="false"/>
+						<line number="16" hits="2" branch="false"/>
+						<line number="17" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.8421052631578947" branch-rate="0.6666666666666666" complexity="2.6666666666666665">
@@ -314,50 +314,50 @@
 						<line number="37" hits="0" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="0.75" branch-rate="0.5" complexity="2.5">
+				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="0.9166666666666666" branch-rate="0.75" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="(ILcom/tw/biblioteca/BookInfoList;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="8" hits="3" branch="false"/>
-								<line number="9" hits="3" branch="false"/>
-								<line number="10" hits="3" branch="false"/>
-								<line number="11" hits="3" branch="false"/>
+								<line number="8" hits="4" branch="false"/>
+								<line number="9" hits="4" branch="false"/>
+								<line number="10" hits="4" branch="false"/>
+								<line number="11" hits="4" branch="false"/>
 							</lines>
 						</method>
-						<method name="dispatch" signature="()V" line-rate="0.625" branch-rate="0.5" complexity="0">
+						<method name="dispatch" signature="()V" line-rate="0.875" branch-rate="0.75" complexity="0">
 							<lines>
-								<line number="15" hits="3" branch="true" condition-coverage="50% (2/4)">
+								<line number="15" hits="4" branch="true" condition-coverage="75% (3/4)">
 									<conditions>
-										<condition number="0" type="switch" coverage="50%"/>
+										<condition number="0" type="switch" coverage="75%"/>
 									</conditions>
 								</line>
 								<line number="17" hits="1" branch="false"/>
 								<line number="18" hits="1" branch="false"/>
 								<line number="20" hits="2" branch="false"/>
 								<line number="21" hits="0" branch="false"/>
-								<line number="23" hits="0" branch="false"/>
-								<line number="24" hits="0" branch="false"/>
-								<line number="26" hits="1" branch="false"/>
+								<line number="23" hits="1" branch="false"/>
+								<line number="24" hits="1" branch="false"/>
+								<line number="26" hits="2" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="8" hits="3" branch="false"/>
-						<line number="9" hits="3" branch="false"/>
-						<line number="10" hits="3" branch="false"/>
-						<line number="11" hits="3" branch="false"/>
-						<line number="15" hits="3" branch="true" condition-coverage="50% (2/4)">
+						<line number="8" hits="4" branch="false"/>
+						<line number="9" hits="4" branch="false"/>
+						<line number="10" hits="4" branch="false"/>
+						<line number="11" hits="4" branch="false"/>
+						<line number="15" hits="4" branch="true" condition-coverage="75% (3/4)">
 							<conditions>
-								<condition number="0" type="switch" coverage="50%"/>
+								<condition number="0" type="switch" coverage="75%"/>
 							</conditions>
 						</line>
 						<line number="17" hits="1" branch="false"/>
 						<line number="18" hits="1" branch="false"/>
 						<line number="20" hits="2" branch="false"/>
 						<line number="21" hits="0" branch="false"/>
-						<line number="23" hits="0" branch="false"/>
-						<line number="24" hits="0" branch="false"/>
-						<line number="26" hits="1" branch="false"/>
+						<line number="23" hits="1" branch="false"/>
+						<line number="24" hits="1" branch="false"/>
+						<line number="26" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
