--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.8539325842696629" branch-rate="0.6363636363636364" lines-covered="76" lines-valid="89" branches-covered="14" branches-valid="22" complexity="2.0588235294117645" version="2.1.1" timestamp="1441695998358">
+<coverage line-rate="0.8695652173913043" branch-rate="0.7307692307692307" lines-covered="80" lines-valid="92" branches-covered="19" branches-valid="26" complexity="2.235294117647059" version="2.1.1" timestamp="1441712398081">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.8539325842696629" branch-rate="0.6363636363636364" complexity="2.0588235294117645">
+		<package name="com.tw.biblioteca" line-rate="0.8695652173913043" branch-rate="0.7307692307692307" complexity="2.235294117647059">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -50,39 +50,39 @@
 						<line number="20" hits="0" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.BookInfo" filename="com/tw/biblioteca/BookInfo.java" line-rate="0.7368421052631579" branch-rate="0.5" complexity="3.0">
+				<class name="com.tw.biblioteca.BookInfo" filename="com/tw/biblioteca/BookInfo.java" line-rate="0.7894736842105263" branch-rate="0.6" complexity="3.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="38" branch="false"/>
-								<line number="10" hits="38" branch="false"/>
-								<line number="11" hits="38" branch="false"/>
-								<line number="12" hits="38" branch="false"/>
-								<line number="13" hits="38" branch="false"/>
+								<line number="9" hits="45" branch="false"/>
+								<line number="10" hits="45" branch="false"/>
+								<line number="11" hits="45" branch="false"/>
+								<line number="12" hits="45" branch="false"/>
+								<line number="13" hits="45" branch="false"/>
 							</lines>
 						</method>
-						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="0.875" branch-rate="0.8333333333333334" complexity="0">
+						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="21" hits="6" branch="true" condition-coverage="100% (2/2)">
+								<line number="21" hits="11" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="22" hits="2" branch="false"/>
-								<line number="24" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="24" hits="9" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="25" hits="1" branch="false"/>
-								<line number="27" hits="3" branch="false"/>
-								<line number="28" hits="3" branch="true" condition-coverage="50% (1/2)">
+								<line number="27" hits="8" branch="false"/>
+								<line number="28" hits="8" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
-										<condition number="0" type="jump" coverage="50%"/>
+										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="29" hits="3" branch="false"/>
-								<line number="31" hits="0" branch="false"/>
+								<line number="29" hits="5" branch="false"/>
+								<line number="31" hits="3" branch="false"/>
 							</lines>
 						</method>
 						<method name="hashCode" signature="()I" line-rate="0.0" branch-rate="0.0" complexity="0">
@@ -109,33 +109,33 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="38" branch="false"/>
-						<line number="10" hits="38" branch="false"/>
-						<line number="11" hits="38" branch="false"/>
-						<line number="12" hits="38" branch="false"/>
-						<line number="13" hits="38" branch="false"/>
+						<line number="9" hits="45" branch="false"/>
+						<line number="10" hits="45" branch="false"/>
+						<line number="11" hits="45" branch="false"/>
+						<line number="12" hits="45" branch="false"/>
+						<line number="13" hits="45" branch="false"/>
 						<line number="16" hits="9" branch="false"/>
 						<line number="17" hits="9" branch="false"/>
-						<line number="21" hits="6" branch="true" condition-coverage="100% (2/2)">
+						<line number="21" hits="11" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="22" hits="2" branch="false"/>
-						<line number="24" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="24" hits="9" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="25" hits="1" branch="false"/>
-						<line number="27" hits="3" branch="false"/>
-						<line number="28" hits="3" branch="true" condition-coverage="50% (1/2)">
+						<line number="27" hits="8" branch="false"/>
+						<line number="28" hits="8" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
-								<condition number="0" type="jump" coverage="50%"/>
+								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="29" hits="3" branch="false"/>
-						<line number="31" hits="0" branch="false"/>
+						<line number="29" hits="5" branch="false"/>
+						<line number="31" hits="3" branch="false"/>
 						<line number="36" hits="0" branch="false"/>
 						<line number="37" hits="0" branch="true" condition-coverage="0% (0/2)">
 							<conditions>
@@ -150,16 +150,16 @@
 						<line number="39" hits="0" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.BookInfoList" filename="com/tw/biblioteca/BookInfoList.java" line-rate="1.0" branch-rate="1.0" complexity="1.3333333333333333">
+				<class name="com.tw.biblioteca.BookInfoList" filename="com/tw/biblioteca/BookInfoList.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="10" branch="false"/>
-								<line number="9" hits="10" branch="false"/>
-								<line number="10" hits="10" branch="false"/>
-								<line number="11" hits="10" branch="false"/>
-								<line number="12" hits="10" branch="false"/>
-								<line number="13" hits="10" branch="false"/>
+								<line number="7" hits="12" branch="false"/>
+								<line number="9" hits="12" branch="false"/>
+								<line number="10" hits="12" branch="false"/>
+								<line number="11" hits="12" branch="false"/>
+								<line number="12" hits="12" branch="false"/>
+								<line number="13" hits="12" branch="false"/>
 							</lines>
 						</method>
 						<method name="printList" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -174,21 +174,27 @@
 								<line number="19" hits="3" branch="false"/>
 							</lines>
 						</method>
-						<method name="remove" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="remove" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="22" hits="2" branch="false"/>
-								<line number="23" hits="2" branch="false"/>
+								<line number="22" hits="3" branch="false"/>
+								<line number="23" hits="3" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
 								<line number="24" hits="2" branch="false"/>
+								<line number="25" hits="2" branch="false"/>
+								<line number="28" hits="1" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="10" branch="false"/>
-						<line number="9" hits="10" branch="false"/>
-						<line number="10" hits="10" branch="false"/>
-						<line number="11" hits="10" branch="false"/>
-						<line number="12" hits="10" branch="false"/>
-						<line number="13" hits="10" branch="false"/>
+						<line number="7" hits="12" branch="false"/>
+						<line number="9" hits="12" branch="false"/>
+						<line number="10" hits="12" branch="false"/>
+						<line number="11" hits="12" branch="false"/>
+						<line number="12" hits="12" branch="false"/>
+						<line number="13" hits="12" branch="false"/>
 						<line number="16" hits="3" branch="false"/>
 						<line number="17" hits="11" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -197,43 +203,59 @@
 						</line>
 						<line number="18" hits="8" branch="false"/>
 						<line number="19" hits="3" branch="false"/>
-						<line number="22" hits="2" branch="false"/>
-						<line number="23" hits="2" branch="false"/>
+						<line number="22" hits="3" branch="false"/>
+						<line number="23" hits="3" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
 						<line number="24" hits="2" branch="false"/>
+						<line number="25" hits="2" branch="false"/>
+						<line number="28" hits="1" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Librarian" filename="com/tw/biblioteca/Librarian.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
+				<class name="com.tw.biblioteca.Librarian" filename="com/tw/biblioteca/Librarian.java" line-rate="1.0" branch-rate="1.0" complexity="1.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/BookInfoList;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="6" hits="3" branch="false"/>
-								<line number="8" hits="3" branch="false"/>
-								<line number="9" hits="3" branch="false"/>
-								<line number="10" hits="3" branch="false"/>
+								<line number="6" hits="4" branch="false"/>
+								<line number="8" hits="4" branch="false"/>
+								<line number="9" hits="4" branch="false"/>
+								<line number="10" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkout" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="13" hits="3" branch="false"/>
-								<line number="14" hits="3" branch="false"/>
-								<line number="15" hits="3" branch="false"/>
-								<line number="16" hits="3" branch="false"/>
-								<line number="17" hits="3" branch="false"/>
-								<line number="18" hits="3" branch="false"/>
+								<line number="13" hits="4" branch="false"/>
+								<line number="14" hits="4" branch="false"/>
+								<line number="15" hits="4" branch="false"/>
+								<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="17" hits="1" branch="false"/>
+								<line number="19" hits="3" branch="false"/>
+								<line number="20" hits="4" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="6" hits="3" branch="false"/>
-						<line number="8" hits="3" branch="false"/>
-						<line number="9" hits="3" branch="false"/>
-						<line number="10" hits="3" branch="false"/>
-						<line number="13" hits="3" branch="false"/>
-						<line number="14" hits="3" branch="false"/>
-						<line number="15" hits="3" branch="false"/>
-						<line number="16" hits="3" branch="false"/>
-						<line number="17" hits="3" branch="false"/>
-						<line number="18" hits="3" branch="false"/>
+						<line number="6" hits="4" branch="false"/>
+						<line number="8" hits="4" branch="false"/>
+						<line number="9" hits="4" branch="false"/>
+						<line number="10" hits="4" branch="false"/>
+						<line number="13" hits="4" branch="false"/>
+						<line number="14" hits="4" branch="false"/>
+						<line number="15" hits="4" branch="false"/>
+						<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="17" hits="1" branch="false"/>
+						<line number="19" hits="3" branch="false"/>
+						<line number="20" hits="4" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.8421052631578947" branch-rate="0.6666666666666666" complexity="2.6666666666666665">
