--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.81" branch-rate="0.6428571428571429" lines-covered="81" lines-valid="100" branches-covered="18" branches-valid="28" complexity="2.15" version="2.1.1" timestamp="1441729106253">
+<coverage line-rate="0.8901098901098901" branch-rate="0.7307692307692307" lines-covered="81" lines-valid="91" branches-covered="19" branches-valid="26" complexity="2.2222222222222223" version="2.1.1" timestamp="1441774913793">
 	<packages />
 </coverage>
