--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.8936170212765957" branch-rate="0.7307692307692307" lines-covered="84" lines-valid="94" branches-covered="19" branches-valid="26" complexity="2.1578947368421053" version="2.1.1" timestamp="1441781522191">
+<coverage line-rate="0.898989898989899" branch-rate="0.7307692307692307" lines-covered="89" lines-valid="99" branches-covered="19" branches-valid="26" complexity="2.1" version="2.1.1" timestamp="1441781683828">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.8936170212765957" branch-rate="0.7307692307692307" complexity="2.1578947368421053">
+		<package name="com.tw.biblioteca" line-rate="0.898989898989899" branch-rate="0.7307692307692307" complexity="2.1">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -52,11 +52,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="47" branch="false"/>
-								<line number="10" hits="47" branch="false"/>
-								<line number="11" hits="47" branch="false"/>
-								<line number="12" hits="47" branch="false"/>
-								<line number="13" hits="47" branch="false"/>
+								<line number="9" hits="50" branch="false"/>
+								<line number="10" hits="50" branch="false"/>
+								<line number="11" hits="50" branch="false"/>
+								<line number="12" hits="50" branch="false"/>
+								<line number="13" hits="50" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -107,11 +107,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="47" branch="false"/>
-						<line number="10" hits="47" branch="false"/>
-						<line number="11" hits="47" branch="false"/>
-						<line number="12" hits="47" branch="false"/>
-						<line number="13" hits="47" branch="false"/>
+						<line number="9" hits="50" branch="false"/>
+						<line number="10" hits="50" branch="false"/>
+						<line number="11" hits="50" branch="false"/>
+						<line number="12" hits="50" branch="false"/>
+						<line number="13" hits="50" branch="false"/>
 						<line number="16" hits="12" branch="false"/>
 						<line number="17" hits="12" branch="false"/>
 						<line number="21" hits="14" branch="true" condition-coverage="100% (2/2)">
@@ -148,14 +148,14 @@
 						<line number="39" hits="0" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Librarian" filename="com/tw/biblioteca/Librarian.java" line-rate="1.0" branch-rate="1.0" complexity="1.5">
+				<class name="com.tw.biblioteca.Librarian" filename="com/tw/biblioteca/Librarian.java" line-rate="1.0" branch-rate="1.0" complexity="1.3333333333333333">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/Library;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="6" hits="4" branch="false"/>
-								<line number="8" hits="4" branch="false"/>
-								<line number="9" hits="4" branch="false"/>
-								<line number="10" hits="4" branch="false"/>
+								<line number="6" hits="5" branch="false"/>
+								<line number="8" hits="5" branch="false"/>
+								<line number="9" hits="5" branch="false"/>
+								<line number="10" hits="5" branch="false"/>
 							</lines>
 						</method>
 						<method name="issueBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -173,12 +173,21 @@
 								<line number="20" hits="4" branch="false"/>
 							</lines>
 						</method>
+						<method name="returnBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="23" hits="1" branch="false"/>
+								<line number="24" hits="1" branch="false"/>
+								<line number="25" hits="1" branch="false"/>
+								<line number="26" hits="1" branch="false"/>
+								<line number="27" hits="1" branch="false"/>
+							</lines>
+						</method>
 					</methods>
 					<lines>
-						<line number="6" hits="4" branch="false"/>
-						<line number="8" hits="4" branch="false"/>
-						<line number="9" hits="4" branch="false"/>
-						<line number="10" hits="4" branch="false"/>
+						<line number="6" hits="5" branch="false"/>
+						<line number="8" hits="5" branch="false"/>
+						<line number="9" hits="5" branch="false"/>
+						<line number="10" hits="5" branch="false"/>
 						<line number="13" hits="4" branch="false"/>
 						<line number="14" hits="4" branch="false"/>
 						<line number="15" hits="4" branch="false"/>
@@ -190,19 +199,24 @@
 						<line number="17" hits="1" branch="false"/>
 						<line number="19" hits="3" branch="false"/>
 						<line number="20" hits="4" branch="false"/>
+						<line number="23" hits="1" branch="false"/>
+						<line number="24" hits="1" branch="false"/>
+						<line number="25" hits="1" branch="false"/>
+						<line number="26" hits="1" branch="false"/>
+						<line number="27" hits="1" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="1.75">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="12" branch="false"/>
-								<line number="8" hits="12" branch="false"/>
-								<line number="10" hits="12" branch="false"/>
-								<line number="11" hits="12" branch="false"/>
-								<line number="12" hits="12" branch="false"/>
-								<line number="13" hits="12" branch="false"/>
-								<line number="14" hits="12" branch="false"/>
+								<line number="7" hits="13" branch="false"/>
+								<line number="8" hits="13" branch="false"/>
+								<line number="10" hits="13" branch="false"/>
+								<line number="11" hits="13" branch="false"/>
+								<line number="12" hits="13" branch="false"/>
+								<line number="13" hits="13" branch="false"/>
+								<line number="14" hits="13" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -239,13 +253,13 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="12" branch="false"/>
-						<line number="8" hits="12" branch="false"/>
-						<line number="10" hits="12" branch="false"/>
-						<line number="11" hits="12" branch="false"/>
-						<line number="12" hits="12" branch="false"/>
-						<line number="13" hits="12" branch="false"/>
-						<line number="14" hits="12" branch="false"/>
+						<line number="7" hits="13" branch="false"/>
+						<line number="8" hits="13" branch="false"/>
+						<line number="10" hits="13" branch="false"/>
+						<line number="11" hits="13" branch="false"/>
+						<line number="12" hits="13" branch="false"/>
+						<line number="13" hits="13" branch="false"/>
+						<line number="14" hits="13" branch="false"/>
 						<line number="17" hits="4" branch="false"/>
 						<line number="18" hits="15" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
